@@ -64,6 +64,7 @@ The attributes listed are then mostly used only if a resolve is triggered automa
     <tr><td>module</td><td>the name of the module to retrieve. This usually doesn't need to be set since it defaults to the last resolved one, except for inline mode where it is required.</td><td>Yes in inline mode, otherwise no, it then defaults to last resolved module name</td></tr>
     <tr><td>revision</td><td>the revision constraint of the module to retrieve. Used only in inline mode. <span class="since">since 1.4</span></td><td>No. Defaults to latest.integration</td></tr>
     <tr><td>branch</td><td>the name of the branch to resolve in inline mode <span class="since">(since 2.1)</span></td><td>Defaults to no branch in inline mode, nothing in standard mode.</td></tr>
+    <tr><td>changing</td><td>indicates that the module may change when resolving in inline mode. See <a href="../concept.html#change">cache and change management</a> for details. Ignored when resolving in standard mode. <span class="since">(since 2.2.0)</span></td><td>No. Defaults to false.</td></tr>
     <tr><td>transitive</td><td>true to resolve dependencies transitively, false otherwise <span class="since">since 1.4</span></td><td>No. Defaults to true</td></tr>
     <tr><td>resolveMode</td><td>the [[ant:resolve resolve mode]] to use when an automatic resolve is triggered <span class="since">(since 2.1)</span></td><td>No. defaults to using the resolve mode set in the [[settings settings]]</td></tr>
     <tr><td>keep</td><td>true to keep the results of the automatic resolve in memory, false to discard them. When this is false, the standard ivy properties won't be set and other postresolve-tasks (like retrieve and cachepath) won't be able to resuse the results of this resolve!</td><td>No. defaults to false for an inline resolve and to true in any other case</td></tr>
