@@ -363,6 +363,12 @@ name|ResolveOptions
 operator|.
 name|LOG_DEFAULT
 decl_stmt|;
+specifier|private
+name|boolean
+name|changing
+init|=
+literal|false
+decl_stmt|;
 specifier|public
 name|boolean
 name|isUseOrigin
@@ -709,6 +715,14 @@ operator|.
 name|setInline
 argument_list|(
 literal|true
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setChanging
+argument_list|(
+name|isChanging
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|resolve
@@ -2054,6 +2068,32 @@ name|keep
 operator|.
 name|booleanValue
 argument_list|()
+return|;
+block|}
+specifier|public
+name|void
+name|setChanging
+parameter_list|(
+name|boolean
+name|changing
+parameter_list|)
+block|{
+name|this
+operator|.
+name|changing
+operator|=
+name|changing
+expr_stmt|;
+block|}
+specifier|public
+name|boolean
+name|isChanging
+parameter_list|()
+block|{
+return|return
+name|this
+operator|.
+name|changing
 return|;
 block|}
 specifier|public
